# fantasie

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
alembic/: env.py
alembic/versions/: 21d2fe7ca352_mudanca_em_availability.py  558af2ded790_.py  c8ab2f0dd90e_added_is_admin_to_employees.py
fantasie/: database.py  main.py  models.py  schemas.py  security.py  settings.py
fantasie/routes/: auth.py  costumes.py  customers.py  employees.py  rental.py
tests/: conftest.py  factories.py  test_auth.py  test_costumes.py  test_customers.py  test_db.py  test_employees.py  test_main.py  test_rental.py
