[project]
name = "fantasie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "bcrypt>=4.3.0",
    "certifi>=2025.6.15",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "coverage>=7.9.2",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "fastapi[standard]>=0.116.0",
    "freezegun>=1.5.2",
    "greenlet>=3.2.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "mako>=1.3.10",
    "markupsafe>=3.0.2",
    "mslex>=1.3.0",
    "packaging>=25.0",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "psutil>=6.1.1",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.2",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "taskipy>=1.14.1",
    "tomli>=2.2.1",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'
indent-style = 'tab'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'uv run uvicorn fantasie.main:app --reload'
test = 'pytest -s -x --cov=fantasie -vv'
post_test = 'coverage html'
